fix: 菜单管理不显示资源
