# api/handler/menu_handler.go
@@ -47,7 +47,6 @@ func (h *MenuHandler) CreateMenu(c *gin.Context) {
 		Name:       request.Name,
 		ParentID:   request.ParentID,
 		Path:       request.Path,
-		Component:  request.Component,
 		Icon:       request.Icon,
 		OrderNum:   request.OrderNum,
 		ResourceID: request.ResourceID,
@@ -66,7 +65,6 @@ func (h *MenuHandler) CreateMenu(c *gin.Context) {
 		Name:       menu.Name,
 		ParentID:   menu.ParentID,
 		Path:       menu.Path,
-		Component:  menu.Component,
 		Icon:       menu.Icon,
 		OrderNum:   menu.OrderNum,
 		ResourceID: menu.ResourceID,
@@ -104,7 +102,6 @@ func (h *MenuHandler) UpdateMenu(c *gin.Context) {
 		Name:       request.Name,
 		ParentID:   request.ParentID,
 		Path:       request.Path,
-		Component:  request.Component,
 		Icon:       request.Icon,
 		OrderNum:   request.OrderNum,
 		ResourceID: request.ResourceID,
@@ -127,7 +124,6 @@ func (h *MenuHandler) UpdateMenu(c *gin.Context) {
 		Name:       menu.Name,
 		ParentID:   menu.ParentID,
 		Path:       menu.Path,
-		Component:  menu.Component,
 		Icon:       menu.Icon,
 		OrderNum:   menu.OrderNum,
 		ResourceID: menu.ResourceID,
@@ -184,7 +180,6 @@ func (h *MenuHandler) GetMenu(c *gin.Context) {
 		Name:       menu.Name,
 		ParentID:   menu.ParentID,
 		Path:       menu.Path,
-		Component:  menu.Component,
 		Icon:       menu.Icon,
 		OrderNum:   menu.OrderNum,
 		ResourceID: menu.ResourceID,
@@ -250,7 +245,6 @@ func (h *MenuHandler) ListMenus(c *gin.Context) {
 			Name:         menu.Name,
 			ParentID:     menu.ParentID,
 			Path:         menu.Path,
-			Component:    menu.Component,
 			Icon:         menu.Icon,
 			OrderNum:     menu.OrderNum,
 			ResourceID:   menu.ResourceID,
@@ -295,7 +289,6 @@ func convertMenuTreeToResponse(menus []entity.Menu) []dto.MenuResponse {
 			Name:       menu.Name,
 			ParentID:   menu.ParentID,
 			Path:       menu.Path,
-			Component:  menu.Component,
 			Icon:       menu.Icon,
 			OrderNum:   menu.OrderNum,
 			ResourceID: menu.ResourceID,
